[package]
name = "mstd-wsj-rss"
authors = ["Seungjin Kim <seungjin@duck.com>"]
description = ""
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1"
spin-sdk = "3.1.0"
spin-cron-sdk = { git = "https://github.com/spinframework/spin-trigger-cron" }
serde_yaml = "0"
rss = "2.0"
chrono = "0.4.40"
chrono-tz = "0.10.3"
urlencoding = "2.1.3"
serde_json = "1.0.140"
convert_case = "0.8.0"
serde = "1.0.219"
serde-hjson = "1.1.0"

[workspace]
